fix img path and index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div>
                         <figure>
-                            <img src="../assets/img/profile-image.jpg" alt="">
+                            <img src="https://www.designstub.com/demos/defolio/assets/images/profile-image.jpg" alt="">
                         </figure>
                     </div>
                     <div>
