--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <div class="main">
-        <header class="ds-header">
+        <!-- Header -->
+        <header class="ds-header ds-fixed-header">
             <div class="container">
                 <div class="ds-header-inner">
                     <a href="index.html" class="ds-logo"><span>J</span>Jason Stroff</a>
@@ -26,6 +27,7 @@
                 </div>
             </div>
         </header>
+        <!-- Banner -->
         <div class="ds-banner">
             <div class="container">
                 <div class="row">
@@ -48,6 +50,7 @@
                 </div>
             </div>
         </div>
+        <!-- About -->
         <div class="ds-about-section">
             <div class="container">
                 <section>
@@ -63,6 +66,7 @@
                 </section>
             </div>
         </div>
+        <!-- Skill -->
         <div class="ds-skills-section">
             <div class="container">
                 <div class="row">
@@ -93,7 +97,140 @@
                 </div>
             </div>
         </div>
+        <!-- Experience -->
+        <div class="ds-experience-section">
+            <div class="container">
+                <h2 class="ds-heading">Work Experience</h2>
+                <div class="row ds-experience-list">
+                    <div>
+                        <section>
+                            <span class="ds-year">2019 - Present</span>
+                            <h3 class="ds-officename">Matrix Media Inc</h3>
+                            <span class="ds-department">Full Stack developer</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare
+                                metus ut, congue enim. Sed fermentum.</p>
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                    ornare metus ut.</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            </ul>
+                        </section>
+                    </div>
+                    <div>
+                        <section>
+                            <span class="ds-year">2018 - 2019</span>
+                            <h3 class="ds-officename">Lexind</h3>
+                            <span class="ds-department">Senior app developer</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare
+                                metus ut, congue enim. Sed fermentum.</p>
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                    ornare metus ut.</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                    ornare metus ut.</li>
+                            </ul>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Work -->
+        <div class="ds-work-section">
+            <div class="container">
+                <h2 class="ds-heading">Latest works</h2>
+                <div class="ds-work-list-section">
+                    <div class="ds-work-list">
+                        <div class="row">
+                            <div>
+                                <section>
+                                    <h3 class="ds-work-title">Tripy mobile app</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                        ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris
+                                        tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                                        malesuada eu orci non sodales.</p>
+                                    <a href="" class="ds-button">Details</a>
+                                </section>
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="https://www.designstub.com/demos/defolio/assets/images/work-1.jpg" alt="">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ds-work-list">
+                        <div class="row">
+                            <div>
+                                <section>
+                                    <h3 class="ds-work-title">Hello mobile app</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                        ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris
+                                        tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                                        malesuada eu orci non sodales.</p>
+                                    <a href="" class="ds-button">Details</a>
+                                </section>
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="https://www.designstub.com/demos/defolio/assets/images/work-2.jpg" alt="">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ds-work-list">
+                        <div class="row">
+                            <div>
+                                <section>
+                                    <h3 class="ds-work-title">Cute cookies app</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus,
+                                        ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris
+                                        tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean
+                                        malesuada eu orci non sodales.</p>
+                                    <a href="" class="ds-button">Details</a>
+                                </section>
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="https://www.designstub.com/demos/defolio/assets/images/work-3.jpg" alt="">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="ds-footer text-center">
+            <div class="container">
+                <section>
+                    <span>Stay in touch</span>
+                    <h4>Ready to talk?</h4>
+                    <p>Feel free to contact us</p>
+                    <a href="" class="ds-button">Lets Talk</a>
+                </section>
+                <span class="ds-copyright">
+                    © 2022 All rights reserved. Free minimal bootstrap template by
+                    <a href="https://www.designstub.com/">Designstub</a>.
+                </span>
+            </div>
+        </footer>
     </div>
 </body>
 
 </html>
+<!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var header = $(".ds-header");
+        var scrollPosition = $(window).scrollTop();
+
+        $(window).scroll(function () {
+            scrollPosition = $(window).scrollTop();
+            if (scrollPosition > 0) {
+                header.addClass("ds-fixed-header");
+            } else {
+                header.removeClass("ds-fixed-header");
+            }
+        });
+    });
+</script> -->
